[package]
name = "cut-optimizer-1d"
version = "0.2.2"
authors = ["Jason Rodney Hansen <jasonrodneyhansen@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A cut optimizer for cutting linear pieces"
repository = "https://github.com/jasonrhansen/cut-optimizer-1d.git"
keywords = ["cuts", "optimize", "optimization", "bin-packing", "bin-packer"]
edition = "2021"


[features]
serialize=["serde"]

[dependencies]
rand = "0.8.3"
fnv = "1.0"
serde = { version = "1.0", features=["derive"], optional = true }
smallvec = "1.8"

[dev-dependencies]
criterion = { version = "0.3", features=["html_reports"] }

[[bench]]
name = 'optimizer'
harness = false
